--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <mat-divider></mat-divider>
 <footer class="bottom" fxLayout="row" fxLayoutAlign="space-around center">
-    TTP, V.munhoih, Churachandpur, Manipur, India.     
+    TTP, V. Munhoih, Churachandpur, Manipur, India.     
 </footer>
