--- a/src/app/modules/LeaveManagement/employee-leave/employee-leave.component.scss
+++ b/src/app/modules/LeaveManagement/employee-leave/employee-leave.component.scss
@@ -1,5 +1,6 @@
-mat-form-field,button{
+mat-form-field{
     margin-right: 15px;
+    width:99%;
 }
 :host{
     width:100%;
@@ -10,4 +11,14 @@ mat-form-field,button{
 .mat-card{
     position: relative;
     width: 99%;
+}
+.mat-column-LeaveTypeId,.mat-column-LeaveStatusId,
+.mat-column-LeaveFrom,.mat-column-LeaveTo{
+    flex:1 0 120px;
+}
+.mat-column-NoOfDays,.mat-column-Active,.mat-column-Action{
+    flex:1 0 80px;
+}
+.mat-column-Remarks,.mat-column-LeaveReason{
+    flex:1 0 200px;
 }
