--- a/src/app/modules/admission/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/admission/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -253,3 +253,11 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
 </mat-table>
 <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
+<div *ngIf="StudentClassForDownload.length>0">
+    <button (click)="exportArray()" mat-raised-button color="accent">
+        <mat-icon>download</mat-icon>
+        <mat-icon *ngIf="loading">
+            <mat-spinner diameter="25"></mat-spinner>
+        </mat-icon>
+    </button>
+</div>
