--- a/src/app/modules/auth/forgotpassword/forgotpassword.component.html
+++ b/src/app/modules/auth/forgotpassword/forgotpassword.component.html
@@ -26,7 +26,7 @@
                     {{ errorMessage }}
                 </div>
             </form>
-            <div class="alert alert-success" *ngIf="isSuccessful" style="margin:30px;flex-direction: column;">
+            <div class="alert alert-success bodyMargin" *ngIf="isSuccessful" style="flex-direction: column;">
                 <p>If email is registered with us, we are sending a link to you registered email address!</p>
                 <a matTooltip="login" style="margin: 15px;" [routerLink]="[ '/auth/login']">
                     <mat-icon>login</mat-icon>
