--- a/src/app/modules/frontoffice/holiday/holiday.component.html
+++ b/src/app/modules/frontoffice/holiday/holiday.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div> -->
     <div style="padding:15px 15px 10px 15px;">
         <div><strong>Events</strong></div>
     </div>
@@ -18,8 +18,8 @@
                 <ng-container matColumnDef="Title">
                     <mat-header-cell *matHeaderCellDef>Holiday
                     </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field appearance="outline">
                             <input autocomplete="Off" matInput (blur)="onBlur(element)" [value]="element.Title"
                                 [(ngModel)]="element.Title" [maxlength]="100">
                         </mat-form-field>
@@ -28,8 +28,8 @@
                 <ng-container matColumnDef="Description">
                     <mat-header-cell *matHeaderCellDef>Description
                     </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="200">
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field appearance="outline">
                             <textarea matInput (blur)="onBlur(element)" [value]="element.Description"
                                 [(ngModel)]="element.Description" [maxlength]="256"></textarea>
                         </mat-form-field>
@@ -38,7 +38,7 @@
                 <ng-container matColumnDef="StartDate">
                     <mat-header-cell *matHeaderCellDef> Start </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                        <mat-form-field appearance="outline">
                             <input [value]="element.StartDate" [(ngModel)]="element.StartDate" matInput
                                 [matDatepicker]="StartDate" autocomplete="off">
                             <mat-datepicker-toggle matSuffix [for]="StartDate"></mat-datepicker-toggle>
@@ -49,7 +49,7 @@
                 <ng-container matColumnDef="EndDate">
                     <mat-header-cell *matHeaderCellDef> End </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                        <mat-form-field appearance="outline">
                             <input [value]="element.EndDate" [(ngModel)]="element.EndDate" matInput
                                 [matDatepicker]="EndDate" autocomplete="off">
                             <mat-datepicker-toggle matSuffix [for]="EndDate"></mat-datepicker-toggle>
@@ -60,8 +60,8 @@
                 <ng-container matColumnDef="HolidayTypeId">
                     <mat-header-cell *matHeaderCellDef>Holiday Type
                     </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field appearance="outline">
                             <mat-select 
                                 [value]="element.HolidayTypeId"
                                 [(ngModel)]="element.HolidayTypeId">
@@ -107,4 +107,4 @@
             Popover on top
         </button> -->
     </div>
-</div>
+<!-- </div> -->
