--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.scss
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.scss
@@ -5,12 +5,14 @@ mat-form-field{
 mat-cell:first-of-type{
     padding-left: 0px;
 }
-.mat-row {
-    height: auto;
+.elementrow {
+    height: 29px;
+    page-break-inside: avoid;
 }
 mat-header-cell{
     border-right: 1px solid lightgray;
-    //padding: 10px;
+    min-width: 40px;
+    padding: 5px;
     display: flex;
     justify-content: flex-end;
     align-items:center;
@@ -18,7 +20,9 @@ mat-header-cell{
 }
 mat-cell{
     border-right: 1px solid lightgray;
-    //padding: 10px;
+    min-width: 40px;
+    padding: 5px;
+    width: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,14 +30,19 @@ mat-cell{
 }
 .mat-column-Student{
     justify-content: flex-start;
-    flex: 1 1 150px;
+    min-width: 180px;
+    
 }
 // .mat-cell {
 //     padding: 0px;
 // }
 .mat-column-Division{
     justify-content:center;
-    flex: 1 1 120px;
+    min-width: 110px;
+}
+.mat-column-Total-Percent,.mat-column-Total-Marks{
+    justify-content:center;
+    min-width: 50px;
 }
 // .element-row{
 //     align-items: baseline;
